hello/fbtest/helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app.kubernetes.io/name: hello-world-example
 name: hello-world
spec:
 replicas: 1
 selector:
   matchLabels:
     app.kubernetes.io/name: hello-world-example
 template:
   metadata:
     labels:
       app.kubernetes.io/name: hello-world-example
   spec:
     containers:
     - image: gcr.io/google-samples/node-hello:1.0
       name: hello-world
       ports:
       - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: hello-world-example
  name: hello-world
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: hello-world-example
  type: NodePort
status:
  loadBalancer: {}
