hello/fbtest/vs-hellotest.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - 'helloworld-route-test-istio-system.apps-crc.testing'
  gateways:
    - my-gateway
  http:
    - route:
        - destination:
            host: hello-world
            port:
              number: 8080
